fixed ui and pixel stuff

--- a/Pages/Hand.razor
+++ b/Pages/Hand.razor
@@ -12,9 +12,11 @@
             <div class="card-content">
                 <h2>About Me</h2>
 
-                <p>Hi, I'm Caden! I'm a student at UC Berkeley studying Electrical Engineering and Computer Science. I'm interested in backend development, machine learning, and low-latency systems. I love building cool stuff so feel to reach out!</p>
+                <p>Hi, I'm Caden! I'm a student at UC Berkeley studying Electrical Engineering and Computer Science. I'm
+                    interested in backend development, machine learning, and low-latency systems. I love building cool
+                    stuff so feel to reach out!</p>
 
-                
+
             </div>
         </div>
 
