changed routes to avoid 404

--- a/Pages/Landing.razor
+++ b/Pages/Landing.razor
@@ -9,10 +9,10 @@
 
         <!-- Poker Chips Horizontal -->
         <div class="chip-row @(isAnimating ? "scatter" : "")">
-            <img src="/images/BlackChip.png" alt="Black Chip" class="poker-chip" />
-            <img src="/images/RedChip.png" alt="Red Chip" class="poker-chip" />
-            <img src="/images/BlueChip.png" alt="Blue Chip" class="poker-chip" />
-            <img src="/images/WhiteChip.png" alt="White Chip" class="poker-chip" />
+            <img src="images/BlackChip.png" alt="Black Chip" class="poker-chip" />
+            <img src="images/RedChip.png" alt="Red Chip" class="poker-chip" />
+            <img src="images/BlueChip.png" alt="Blue Chip" class="poker-chip" />
+            <img src="images/WhiteChip.png" alt="White Chip" class="poker-chip" />
         </div>
 
         <button class="pixel-button" @onclick="DealMeIn">
