--- a/Pages/Landing.razor
+++ b/Pages/Landing.razor
@@ -122,6 +122,6 @@
         await Task.Delay(800);
 
         // Navigate to table
-        NavigationManager.NavigateTo("/table");
+        NavigationManager.NavigateTo("table");
     }
 }
