--- a/Pages/Projects.razor
+++ b/Pages/Projects.razor
@@ -141,6 +141,6 @@
 
     private void BackToTable()
     {
-        NavigationManager.NavigateTo("/table");
+        NavigationManager.NavigateTo("table");
     }
 }
